# FreeDF

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: 01-overview.md  02-stack-tecnico.md  03-architettura.md  04-roadmap-mvp.md  05-distribuzione.md  06-github-opensource.md
scripts/: register_windows.py
src/freedf/: __init__.py  app.py  cli.py
src/freedf/commands/: __init__.py  annotation_commands.py  base.py  form_commands.py  multifile_commands.py  ocr_commands.py  page_commands.py  text_commands.py
src/freedf/core/: __init__.py  annotations.py  document.py  exceptions.py  forms.py  images.py  multifile.py  ocr.py  page.py  recent_files.py  text_edit.py  text_export.py
src/freedf/i18n/: __init__.py  freedf_it.ts
src/freedf/io/: __init__.py  loader.py  saver.py
src/freedf/plugins/: __init__.py  base.py  loader.py
src/freedf/rendering/: __init__.py  cache.py  renderer.py
src/freedf/ui/: __init__.py  annotation_panel.py  main_window.py  page_scene.py  page_view.py  thumbnails.py  toolbar.py  workers.py
src/freedf/ui/dialogs/: __init__.py  export_text_dialog.py  extract_dialog.py  find_replace_dialog.py  image_dialog.py  insert_dialog.py  insert_text_dialog.py  merge_dialog.py  ocr_dialog.py  split_dialog.py  watermark_dialog.py
src/freedf/ui/panels/: __init__.py  form_panel.py  properties_panel.py
src/freedf/ui/tools/: __init__.py  base_tool.py  freetext_tool.py  highlight_tool.py  ink_tool.py  redact_tool.py  select_tool.py  shape_tool.py  stamp_tool.py  text_selector.py  tool_manager.py
src/freedf/ui/widgets/: __init__.py  color_picker.py  thickness_picker.py
tests/: conftest.py
tests/test_commands/: test_annotation_commands.py  test_command_stack.py  test_form_commands.py  test_multifile_commands.py  test_page_commands.py  test_text_commands.py
tests/test_core/: test_document.py  test_forms.py  test_multifile.py  test_ocr.py  test_page.py  test_recent_files.py  test_text_edit.py  test_text_export.py
tests/test_rendering/: test_renderer.py
