[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freedf"
version = "0.5.0"
description = "A free, open-source PDF editor built with Python and PySide6."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "FreeDF Contributors" },
]
keywords = ["pdf", "editor", "viewer", "annotations", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PyMuPDF>=1.24",
    "pikepdf>=9",
    "Pillow>=10",
    "PySide6>=6.6",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3",
]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytesseract>=0.3",
]

[project.scripts]
freedf = "freedf.app:main"
freedf-cli = "freedf.cli:main"

[project.urls]
Homepage = "https://github.com/FreeDF/FreeDF"
Repository = "https://github.com/FreeDF/FreeDF"
Issues = "https://github.com/FreeDF/FreeDF/issues"
Changelog = "https://github.com/FreeDF/FreeDF/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/freedf"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["freedf"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fitz", "pytesseract"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "ui: marks tests that require a display (deselect with '-m \"not ui\"')",
    "ocr: marks tests that require Tesseract (deselect with '-m \"not ocr\"')",
]

[tool.coverage.run]
source = ["freedf"]
omit = ["src/freedf/ui/*"]

[tool.coverage.report]
show_missing = true
